# Nuked-SC55

./: CMakeLists.txt
src/: lcd.cpp  mcu.cpp  mcu.h  sc55sound.cpp  sc55sound.def  sc55sound.h  submcu.cpp
